@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<minimalLanguageDiagram dslVersion="1.0.0.0" Id="8bc19198-bf81-483c-8fc5-468e4f66d51c" absoluteBounds="0, 0, 15.375, 13.625" name="PublicOrderConfigurationSection">
+<minimalLanguageDiagram dslVersion="1.0.0.0" Id="8bc19198-bf81-483c-8fc5-468e4f66d51c" absoluteBounds="0, 0, 15.375, 14" name="PublicOrderConfigurationSection">
   <configurationSectionModelMoniker Id="46147fb7-ba4e-410f-91eb-7f9c681dc0fe" />
   <nestedChildShapes>
     <configurationSectionShape Id="c33aa802-ff39-4f41-9556-037c6d78f5f0" absoluteBounds="2.125, 1.75, 8.25, 3.7109993489583326" outlineDashStyle="Solid" outlineThickness="0.015625">
@@ -247,14 +247,14 @@
         <elementListCompartment Id="4fe655e3-547e-4c90-9e5c-11499053aaf8" absoluteBounds="5.14, 10.7943896484375, 1.4700000000000002, 0.2493896484375" name="ElementProperties" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </configurationElementCollectionShape>
-    <configurationElementShape Id="631e35eb-73e0-4c9f-a2f2-5ca71a371531" absoluteBounds="6.125, 12.125, 1.5, 1.2110807291666657" outlineDashStyle="Solid" outlineThickness="0.015625">
+    <configurationElementShape Id="631e35eb-73e0-4c9f-a2f2-5ca71a371531" absoluteBounds="6.125, 12.125, 1.5, 1.5956835937499996" outlineDashStyle="Solid" outlineThickness="0.015625">
       <configurationElementMoniker name="/46147fb7-ba4e-410f-91eb-7f9c681dc0fe/DomainRegistrySpecificProduct" />
       <nestedChildShapes>
-        <elementListCompartment Id="f30341d3-4b4d-445d-ba47-95da744f3aa6" absoluteBounds="6.14, 12.535, 1.4700000000000002, 0.44169108072916663" name="AttributeProperties" titleTextColor="Black" itemTextColor="Black" />
-        <elementListCompartment Id="67c67296-19ae-4d6a-a4df-ca4f8a5b8d8f" absoluteBounds="6.14, 12.986691080729166, 1.4700000000000002, 0.2493896484375" name="ElementProperties" titleTextColor="Black" itemTextColor="Black" />
+        <elementListCompartment Id="f30341d3-4b4d-445d-ba47-95da744f3aa6" absoluteBounds="6.14, 12.535, 1.4700000000000002, 0.8262939453125" name="AttributeProperties" titleTextColor="Black" itemTextColor="Black" />
+        <elementListCompartment Id="67c67296-19ae-4d6a-a4df-ca4f8a5b8d8f" absoluteBounds="6.14, 13.3712939453125, 1.4700000000000002, 0.2493896484375" name="ElementProperties" titleTextColor="Black" itemTextColor="Black" />
       </nestedChildShapes>
     </configurationElementShape>
-    <configurationElementCollectionHasItemTypeConnector edgePoints="[(6.375 : 11.143779296875); (6.375 : 12.125)]" fixedFrom="NotFixed" fixedTo="NotFixed" TargetRelationshipDomainClassId="c2b30fd0-a8b8-4b9f-abe5-fd8447c1f53e">
+    <configurationElementCollectionHasItemTypeConnector edgePoints="[(6.375 : 11.143779296875); (6.375 : 12.125)]" fixedFrom="Algorithm" fixedTo="Algorithm" TargetRelationshipDomainClassId="c2b30fd0-a8b8-4b9f-abe5-fd8447c1f53e">
       <relativeChildShapes />
       <nodes>
         <configurationElementCollectionShapeMoniker Id="fd79fa4a-8e9a-4b93-b9b4-82aa109aa038" />
